# packaday

./: .gitignore  .ocamlformat  AGENTS.md  CLAUDE.md  README.md  dune-project  eslint.config.js  eslint.config.ts  index.html  packaday.opam  package.json  playwright-ct.config.ts  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  types.d.ts  vite.config.js  vite.config.ts
.claude/: settings.local.json
assets/: index-1Bc3USuE.css  index-B5NzFvWJ.css  index-CJXMYFOz.css  index-CR8FfENS.js  index-CY6YYdn3.js  index-CopnkNJw.css  index-DKasnzgz.js  index-D_xsOvF7.css  index-Df8PKLoq.js  index-DfntTyXJ.js  index-DrgdFROQ.js  index-HCjWJnOf.js  index-QSt1fmt-.js
docs/: testing.md
docs/plans/: 2026-05-01-piece-snapping.md
docs/specs/: 2026-05-01-piece-snapping-design.md
patches/: vite-plugin-melange.patch
playwright/: index.html
src/: App.mlx  Board.d.ts  Board.mli  Board.mlx  Game.mli  Game.mlx  Geometry.mlx  Hooks.mli  Hooks.mlx  Main.mlx  Piece.d.ts  Piece.mli  Piece.mlx  Prelude.ml  Shape.d.ts  Shape.mli  Shape.mlx  Test.ml  Test_inline.mli  Tile.mlx  dune  styles.css
tests/components/: Board.spec.tsx  Board_ocaml.spec.tsx  Board_spec.js  Board_spec.ml  Board_spec.mli  PieceButton.spec.tsx  PieceFloating.spec.tsx  PieceShape.spec.tsx  Playwright.js  Playwright.ml  Playwright.mli  Shape.spec.tsx  dune  wrappers.tsx
tests/e2e/: calendar.spec.ts  piece-interaction.spec.ts  setup.ts
