(melange.emit
 (target output)
 (promote (until-clean))
 (alias app)
 (libraries reason-react melange-fest)
 (preprocess (pps melange.ppx reason-react-ppx))
 (module_systems esm))

(rule
 (alias runtest)
 (deps
  (alias app))
 (action
  (setenv NODE_TEST 1
   (bash "grep -l Melange__Test output/src/*.js | xargs node --test"))))
